--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-streamlit
-pandas
-requests
-streamlit-autorefresh
+streamlit>=1.32.0
+pandas>=2.0.0
+requests>=2.28.0
+openpyxl>=3.1.0
+python-docx>=1.1.0
